# fastapi-prod-template

./: alembic.ini  main.py  manage.py  pyproject.toml
api/: __init__.py  v1.py
api/v1/: __init__.py  auth.py  user.py
app/: app.py
app/migrations/: env.py
app/models/: auth.py  base.py
app/repositories/: auth.py  base.py
app/schemas/: __init__.py  auth.py  base.py
app/services/: auth.py
core/: asgi.py  config.py  types.py
core/cli/: __init__.py  commands.py
core/controller/: __init__.py  base.py  sets.py
core/controllers/: __init__.py  base.py  generic.py
core/db/: __init__.py  session.py  transactional.py
core/repository/: base.py
core/schema/: __init__.py  base.py
core/security/: __init__.py  mixins.py  permission.py  tokens.py
core/service/: __init__.py  base.py
core/utils/: filters.py  jwt_helper.py  module_loading.py  pagination.py  string.py  typography.py
core/worker/: __init__.py
migrations/: env.py
tests/core/: test_db.py
tests/core/controller/: test_base_controller.py  test_controller_decorators.py  test_generic.py
tests/core/security/: test_authentication_dependencies.py  test_authorization_class.py  test_token_generation.py
tests/core/utils/: test_module_loading.py  test_string.py
