[tool.poetry]
name = "fastapi-clean-architecture-template"
version = "0.1.0"
description = ""
authors = ["Vladyslav Chaliuk <chaliukvladyslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.0"
alembic = "^1.14.1"
fastapi-pagination = "^0.12.34"
fastapi-filter = "^2.0.1"
uvicorn = "^0.34.0"
makefun = "^1.15.6"
mashumaro = "^3.15"
pwdlib = {extras = ["argon2", "bcrypt"], version = "^0.2.1"}
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
celery = "^5.4.0"
typer = "^0.15.2"
fastapi-cli = "^0.0.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
httpx = "^0.28.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
